# Cards

./: Cards.cabal  README.md  stack.yaml
.stack-work/install/x86_64-linux-nopie/nightly-2017-10-09/8.2.1/flag-cache/: Cards-0.1.0.0-Ex6GYQCLQeJFDIXDBioJ3g  accelerate-1.1.1.0-JKuC6vWmmbi3ddUNMezI71  ansi-terminal-0.6.3.1-6S1osGECWg3D44HcMOLN9d  ansi-wl-pprint-0.6.8.1-B8gRnutUpcv3N7jEO9txsm  base-orphans-0.6-9iPDLrUqQ5yHb9fb9OUZ9L  exceptions-0.8.3-HINoBwtN48o2d9ivdKpf7Y  fclabels-2.0.3.2-C4TftBJxLKb5LMOYkGTlWW  hashable-1.2.6.1-4gQhquVO6wC1mCYLgdW6xs  hashtables-1.2.2.1-J2HL3T536oe7Q268sXDQ94  mtl-2.2.1-19EL8AGBsN3DnnOhrC9xY3  primitive-0.6.2.0-V0ibjLQDdN6fcQS5bjLVg  stm-2.4.4.1-2iQ3ZIiQ6vc4AnCVcs8oMd  text-1.2.2.2-Ja5vhWvrB3PHMSPwq0buEf  transformers-compat-0.5.1.4-8ofY1OHzPhX5dvYk512o2v  unique-0-GYc9ruyW48cGTn2wj2JT38  unordered-containers-0.2.8.0-Gyt5v4dJjM77pHzycDWM9B  vector-0.12.0.1-CnPH69pDwM4A5esizlXfXi
.stack-work/install/x86_64-linux-nopie/nightly-2017-10-09/8.2.1/lib/x86_64-linux-ghc-8.2.1/Cards-0.1.0.0-Ex6GYQCLQeJFDIXDBioJ3g/Data/: Card.dyn_hi
.stack-work/install/x86_64-linux-nopie/nightly-2017-10-09/8.2.1/pkgdb/: Cards-0.1.0.0-Ex6GYQCLQeJFDIXDBioJ3g.conf  package.cache
.stack-work/install/x86_64-linux/lts-9.6/8.0.2/doc/Cards-0.1.0.0/: LICENSE
.stack-work/install/x86_64-linux/lts-9.6/8.0.2/lib/x86_64-linux-ghc-8.0.2/Cards-0.1.0.0-GKarZj0i4zNLPNCr09Icx8/: Lib.dyn_hi  Lib.hi
app/: Main.hs
src/: Lib.hs  Render.hs
src/Data/: Card.hs
test/: DeckProperties.hs  Spec.hs
