name:                Cards
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/lokilow/Cards#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Lowen
maintainer:          lokilow@protonmail.com
copyright:           2017 Chris Lowen
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Data.Card
  build-depends:       base >= 4.7 && < 5
                     , GLUT
                     , OpenGL
  default-language:    Haskell2010

executable Cards-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Cards
                     , accelerate
  default-language:    Haskell2010

test-suite Cards-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Cards
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  other-modules:       DeckProperties

source-repository head
  type:     git
  location: https://github.com/lokilow/Cards
